--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <section class="hero">
         <div class="container">
-          <div class="">
+          <div class="hero__content">
             <div class="flow-content">
               <h1>
                 Books hard to follow, and YouTube letting you down?
