--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </p>
               <a href="#" class="btn">Start learning</a>
             </div>
-            <div>
+            <div class="hero__image">
               <img
                 src="assets/hero.jpg"
                 alt="man with a deck of cards floating between his hands, which are in front of his concealed face"
@@ -43,7 +43,7 @@
         <!-- /container -->
       </section>
 
-      <section class="mastering">
+      <section class="mastering bg-dark">
         <div class="container">
           <h2>Start mastering magic today</h2>
           <ul>
@@ -72,7 +72,7 @@
         <!-- /container -->
       </section>
 
-      <section>
+      <section class="mastering">
         <div class="container">
           <h2>Join now and get access to our entire library of tricks</h2>
           <ul>
@@ -113,14 +113,16 @@
         <!-- /container -->
       </section>
 
-      <section class="cta">
+      <section class="cta bg-image">
         <div class="container">
-          <h2>You’re only one step away</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            placerat, ipsum ac auctor ornare.
-          </p>
-          <a href="#" class="btn">Start Learning</a>
+          <div class="flow-content">
+            <h2>You’re only one step away</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+              placerat, ipsum ac auctor ornare.
+            </p>
+            <a href="#" class="btn">Start Learning</a>
+          </div>
         </div>
         <!-- /container -->
       </section>
