--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <h2>Join now and get access to our entire library of tricks</h2>
 
           <ul class="split">
-            <li class="flow-content bg-dark">
+            <li class="flow-content bg-accent">
               <img
                 class="shadow"
                 src="assets/all-access-03.jpg"
@@ -109,7 +109,7 @@
                 Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
               </p>
             </li>
-            <li class="flow-content bg-accent">
+            <li class="flow-content bg-dark">
               <img
                 class="shadow"
                 src="assets/all-access-04.jpg"
@@ -120,7 +120,7 @@
                 Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
               </p>
             </li>
-            <li class="flow-content bg-dark">
+            <li class="flow-content bg-accent">
               <img
                 class="shadow"
                 src="assets/all-access-01.jpg"
@@ -131,7 +131,7 @@
                 Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
               </p>
             </li>
-            <li class="flow-content bg-accent">
+            <li class="flow-content bg-dark">
               <img
                 class="shadow"
                 src="assets/all-access-02.jpg"
@@ -212,7 +212,7 @@
         </div>
       </section>
 
-      <section class="bg-image cta cta_2">
+      <section class="bg-light cta cta_2">
         <div
           class="container container--small flow-content flow-content--large"
         >
