final product with few changes as demonstrated by Kevin

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <h2>Join now and get access to our entire library of tricks</h2>
 
           <ul class="split">
-            <li class="flow-content bg-accent">
+            <li class="flow-content corner-square">
               <img
                 class="shadow"
                 src="assets/all-access-03.jpg"
@@ -109,7 +109,7 @@
                 Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
               </p>
             </li>
-            <li class="flow-content bg-dark">
+            <li class="flow-content corner-square">
               <img
                 class="shadow"
                 src="assets/all-access-04.jpg"
@@ -120,7 +120,7 @@
                 Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
               </p>
             </li>
-            <li class="flow-content bg-accent">
+            <li class="flow-content corner-square">
               <img
                 class="shadow"
                 src="assets/all-access-01.jpg"
@@ -131,7 +131,7 @@
                 Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
               </p>
             </li>
-            <li class="flow-content bg-dark">
+            <li class="flow-content corner-square">
               <img
                 class="shadow"
                 src="assets/all-access-02.jpg"
@@ -175,7 +175,9 @@
             </p>
           </div>
           <div class="split">
-            <div class="testimonial bg-dark flow-content flow-content--large">
+            <div
+              class="testimonial corner-square bg-dark flow-content flow-content--large"
+            >
               <p class="section-content">
                 Commodo risus non cursus risus, metus, velit scelerisque urna,
                 aenean leo diam arcu sed arcu purus sagittis posuere orci ornare
@@ -186,7 +188,9 @@
                 <p class="position">CEO of Company</p>
               </div>
             </div>
-            <div class="testimonial bg-accent flow-content flow-content--large">
+            <div
+              class="testimonial corner-square bg-accent flow-content flow-content--large"
+            >
               <p class="section-content">
                 Commodo risus non cursus risus, metus, velit scelerisque urna,
                 aenean leo diam arcu sed arcu purus sagittis posuere orci ornare
@@ -197,7 +201,9 @@
                 <p class="position">CEO of Company</p>
               </div>
             </div>
-            <div class="testimonial bg-dark flow-content flow-content--large">
+            <div
+              class="testimonial corner-square bg-dark flow-content flow-content--large"
+            >
               <p class="section-content">
                 Commodo risus non cursus risus, metus, velit scelerisque urna,
                 aenean leo diam arcu sed arcu purus sagittis posuere orci ornare
