--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <section class="recent-articles bg-primary-300">
-      <div class="container split">
+      <div class="container row">
         <header>
           <h2 class="section-title">Blog</h2>
           <p class="section-subtitle">Latest thoughts, news and ideas</p>
@@ -125,22 +125,22 @@
     </section>
 
     <footer class="primary-footer">
-      <div class="primary-footer__inner">
+      <div class="primary-footer__inner split">
         <a href="index.html" aria-label="acme home page"
           ><img src="img/logo.svg" alt="" class="logo"
         /></a>
 
         <dl>
           <dt class="text-serif">Map</dt>
-          <dd><a href="#">Blog</a></dd>
-          <dd><a href="#">Privacy</a></dd>
+          <dd><a href="#" class="btn">Blog</a></dd>
+          <dd><a href="#" class="btn">Privacy</a></dd>
         </dl>
 
         <dl>
           <dt class="text-serif">Resources</dt>
-          <dd><a href="#">Courses</a></dd>
-          <dd><a href="#">Hacks</a></dd>
-          <dd><a href="#">Free stuff</a></dd>
+          <dd><a href="#" class="btn">Courses</a></dd>
+          <dd><a href="#" class="btn">Hacks</a></dd>
+          <dd><a href="#" class="btn">Free stuff</a></dd>
         </dl>
       </div>
       <div class="split text-serif">
