--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         /></a>
         <nav class="primary-nav">
           <ul class="primary-nav__list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="index.html" class="btn btn-primary">Home</a></li>
+            <li><a href="blog.html" class="btn btn-primary">Blog</a></li>
           </ul>
         </nav>
       </div>
@@ -35,7 +35,7 @@
           Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna.
         </p>
-        <a href="#" class="btn">Connect</a>
+        <a href="#" class="btn btn-secondary">Connect</a>
       </div>
     </section>
 
@@ -118,7 +118,7 @@
                 placeholder="example@domain.com"
               />
             </div>
-            <button type="submit" class="btn">Subscribe</button>
+            <button type="submit" class="btn btn-secondary">Subscribe</button>
           </form>
         </div>
       </div>
