--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <header class="primary-header">
+    <header class="primary-header bg-home">
       <div class="primary-header__inner">
         <a href="index.html" aria-label="acme home page"
           ><img src="img/logo.svg" alt="" class="logo"
