--- a/blog.html
+++ b/blog.html
@@ -40,8 +40,8 @@
       <a href="#newsletter" class="btn btn-secondary">Subscribe</a>
     </div>
 
-    <div class="article-grid container split">
-      <article class="article-preview flow-content">
+    <div class="article-grid container">
+      <article class="article-preview">
         <img src="img/blog-1.jpg" alt="electric drill" />
         <h3>Lorem ipsum dolor sit amet, consectet adipiscing</h3>
         <p>Lorem ipsum dolor sit amet, consectet adipiscing</p>
@@ -117,9 +117,9 @@
         </div>
       </article>
 
-      <div class="more-stories">
+      <!-- <div class="more-stories">
         <a href="#" class="btn">More stories</a>
-      </div>
+      </div> -->
     </div>
 
     <section class="call-to-action">
