blog page done..finally...added more stories div

--- a/blog.html
+++ b/blog.html
@@ -116,10 +116,10 @@
           <p>8 min read</p>
         </div>
       </article>
+    </div>
 
-      <!-- <div class="more-stories">
-        <a href="#" class="btn">More stories</a>
-      </div> -->
+    <div class="more-stories container">
+      <a href="#" class="btn">More stories</a>
     </div>
 
     <section class="call-to-action">
