--- a/blog.html
+++ b/blog.html
@@ -172,7 +172,7 @@
           </div>
         </div>
         <div class="split text-serif">
-          <p class="copywrite">© 2020 acme. All rights reserved</p>
+          <p class="copywrite">© 2020 acme. All rights reserve`d</p>
           <ul class="footer-social">
             <li><a href="#">Yt</a></li>
             <li><a href="#">Tw</a></li>
